Added mysql docker-compose, Added file service

--- a/Code/src/main/resources/application.properties
+++ b/Code/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 multipart.maxFileSize=1MB
 multipart.maxRequestSize=1MB
+
+journal.file.path.pattern=/Users/pgyschuk/Projects/JournalsCrossoverJavaTrial/PDFs/%s/%s.pdf
+journal.directory.path.pattern=/Users/pgyschuk/Projects/JournalsCrossoverJavaTrial/PDFs/%s
