Implemented Mail service

--- a/Code/src/main/resources/application.properties
+++ b/Code/src/main/resources/application.properties
@@ -14,3 +14,24 @@ multipart.maxRequestSize=1MB
 
 journal.file.path.pattern=/Users/pgyschuk/Projects/JournalsCrossoverJavaTrial/PDFs/%s/%s.pdf
 journal.directory.path.pattern=/Users/pgyschuk/Projects/JournalsCrossoverJavaTrial/PDFs/%s
+
+spring.velocity.resourceLoaderPath=classpath:/email-templates/
+spring.velocity.prefix=
+spring.velocity.suffix=.vm
+spring.velocity.cache=false
+spring.velocity.check-template-location=true
+spring.velocity.content-type=text/html
+spring.velocity.charset=UTF-8
+spring.velocity.properties.input.encoding=UTF-8
+spring.velocity.properties.output.encoding=UTF-8
+
+mail.protocol=smtp
+mail.host=smtp.gmail.com
+mail.port=465
+mail.smtp.socketFactory.port=465
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.smtp.starttls.required=true
+mail.smtp.socketFactory.fallback=false
+mail.username=crossover.trial.pgyschuk@gmail.com
+mail.password=123qweasdf
