--- a/Code/src/test/resources/application-test.properties
+++ b/Code/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/journals?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql:3306/journals?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -28,7 +28,11 @@ spring.velocity.properties.output.encoding=UTF-8
 mail.protocol=smtp
 mail.host=localhost
 mail.port=3025
+mail.smtp.auth=false
 mail.smtp.ssl.enable=false
 mail.smtp.starttls.enable=false
 mail.smtp.starttls.required=false
 mail.smtp.socketFactory.port=3025
+mail.smtp.socketFactory.fallback=false
+mail.username=
+mail.password=
