--- a/Code/src/main/resources/application.properties
+++ b/Code/src/main/resources/application.properties
@@ -35,3 +35,4 @@ mail.smtp.starttls.required=true
 mail.smtp.socketFactory.fallback=false
 mail.username=crossover.trial.pgyschuk@gmail.com
 mail.password=123qweasdf
+mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
