--- a/Code/src/test/resources/application-test.properties
+++ b/Code/src/test/resources/application-test.properties
@@ -36,3 +36,4 @@ mail.smtp.socketFactory.port=3025
 mail.smtp.socketFactory.fallback=false
 mail.username=
 mail.password=
+mail.smtp.socketFactory.class=
