--- a/Code/src/main/resources/application.properties
+++ b/Code/src/main/resources/application.properties
@@ -15,15 +15,7 @@ multipart.maxRequestSize=1MB
 journal.file.path.pattern=/Users/pgyschuk/Projects/JournalsCrossoverJavaTrial/PDFs/%s/%s.pdf
 journal.directory.path.pattern=/Users/pgyschuk/Projects/JournalsCrossoverJavaTrial/PDFs/%s
 
-spring.velocity.resourceLoaderPath=classpath:/email-templates/
-spring.velocity.prefix=
-spring.velocity.suffix=.vm
-spring.velocity.cache=false
-spring.velocity.check-template-location=true
-spring.velocity.content-type=text/html
-spring.velocity.charset=UTF-8
-spring.velocity.properties.input.encoding=UTF-8
-spring.velocity.properties.output.encoding=UTF-8
+spring.freemarker.template-loader-path=classpath:/email-templates/
 
 mail.protocol=smtp
 mail.host=smtp.gmail.com
