--- a/Code/src/test/resources/application-test.properties
+++ b/Code/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql:3306/journals?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/journals?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -15,15 +15,7 @@ multipart.maxRequestSize=1MB
 journal.file.path.pattern=/Users/pgyschuk/Projects/JournalsCrossoverJavaTrial/PDFs/%s/%s.pdf
 journal.directory.path.pattern=/Users/pgyschuk/Projects/JournalsCrossoverJavaTrial/PDFs/%s
 
-spring.velocity.resourceLoaderPath=classpath:/email-templates/
-spring.velocity.prefix=
-spring.velocity.suffix=.vm
-spring.velocity.cache=false
-spring.velocity.check-template-location=true
-spring.velocity.content-type=text/html
-spring.velocity.charset=UTF-8
-spring.velocity.properties.input.encoding=UTF-8
-spring.velocity.properties.output.encoding=UTF-8
+spring.freemarker.template-loader-path=classpath:/email-templates/
 
 mail.protocol=smtp
 mail.host=localhost
